# fibbot

./: .env  Cargo.toml  Dockerfile  README.md  action.yml  script.sh
.github/workflows/: action.yml
src/: comment.rs  fib.rs  main.rs  numbers.rs  pull_request.rs  regex.rs
