[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
num = "0.4"
tokio = { version = "1.39.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"]}
octocrab="0.43.0"
dotenv = "0.15"
anyhow = "1.0"

